# fast-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yaml  logging.ini  pyproject.toml
.aws/: task-definition.json
.github/: deploy-dev.yaml
.github/workflows/: deploy-dev.yaml  run-tests.yaml
alembic/: env.py
alembic/versions/: 2023_06_16_0227-192b914e7f19_init.py  2023_06_17_1404-a86ce123173a_add_stores_table.py  2023_06_17_1855-517037de8e5a_add_created_updated_cols_to_store.py  2023_06_19_0033-fe9f935ba177_add_events_table.py  2023_06_19_1230-b4889af110bd_add_address_json_col_to_events.py  2023_06_20_1326-0c987e7a1c6f_add_extra_json_col_to_events.py  2023_06_20_2001-8f622b7e3991_add_address_table_remove_adddres_json_.py  2023_06_20_2127-f006eaa3d35b_add_impressions_table.py
db/: Dockerfile  create.sql
opalizer/: config.py  database.py  default.toml  exceptions.py  logging.ini  main.py  models.py  schemas.py  settings.dev.toml  settings.test.toml  shared_models.py
opalizer/api/events/: models.py  router.py  schemas.py  service.py  utils.py
opalizer/api/geomap/: models.py  service.py
opalizer/api/store/: models.py  router.py  schemas.py  service.py
opalizer/api/tenants/: exceptions.py  models.py  router.py  schemas.py  service.py  utils.py
opalizer/auth/: key.py  utils.py
opalizer/core/: logging.py  scheduler.py  utils.py
opalizer/geolocator/: geocoder.py  gmaps.py
opalizer/internal/admin/: auth.py  router.py
tests/: conftest.py
tests/store/: test_store.py
tests/tenants/: test_tenant.py  test_tenant_servivce.py
