[tool.poetry]
name = "fast-api"
version = "0.1.0"
description = ""
authors = ["geekwhocodes <ganeshraskar@outlook.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.96.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
opentelemetry-instrumentation-fastapi = "^0.39b0"
rich = "^13.4.1"
slowapi = "^0.1.8"
schedule = "^1.2.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.17"}
orjson = "^3.9.1"
psycopg2-binary = "^2.9.6"
pydantic = "^1.10.9"
sqlalchemy-utils = "^0.41.1"
asyncpg = "^0.27.0"
unidecode = "^1.3.6"
psycopg = "^3.1.9"
alembic = "1.11.1"
geopy = {extras = ["aiohttp"], version = "^2.3.0"}
python-geohash = "^0.8.5"
python-multipart = "^0.0.6"
python-jose = "^3.3.0"
passlib = "^1.7.4"
dynaconf = "^3.1.12"
uvloop = "^0.17.0"

pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
async-asgi-testclient = "^1.4.11"
pytest-dependency = "^0.5.1"
pytest-cov = "^4.1.0"
ruff = "^0.0.274"
black = "^23.3.0"
pre-commit = "^3.3.3"
codecov = "^2.1.13"
httpx = "^0.24.1"
safety = "^2.3.5"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
httpx = "^0.24.1"
ipykernel = "^6.23.1"
pytest-asyncio = "^0.21.0"
async-asgi-testclient = "^1.4.11"
pytest-dependency = "^0.5.1"
pytest-cov = "^4.1.0"
ruff = "^0.0.274"
black = "^23.3.0"
pre-commit = "^3.3.3"
codecov = "^2.1.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "tenant: tenant apis"
]

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "B904",
    "E402", # conftest
]

[tool.ruff.isort]
known-third-party = ["fastapi", "pydantic", "starlette"]

